CAS必须跟volatile配合使用